--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.2",
+    "passport": "^0.7.0",
     "pdfkit": "^0.15.0",
     "puppeteer": "^22.13.0",
     "shortid": "^2.2.16"
