--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.7.0",
     "pdfkit": "^0.15.0",
     "puppeteer": "^22.0.0",
+    "puppeteer-core": "^22.13.1",
     "shortid": "^2.2.16"
   }
 }
